syntax = "proto3";

package extras.ex2;

option java_package = "uk.me.uohiro.protobuf.model.extras.ex2";
option java_outer_classname = "WeatherAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service Weather {
	rpc GetCurrent(WeatherRequest) returns (WeatherResponse);
}

service TemperatureService {
	rpc GetCurrent(Coordinates) returns (Temperature);
}

service HumidityService {
	rpc GetCurrent(Coordinates) returns (HumidityResponse);
}

service WindService {
	rpc GetCurrent(Coordinates) returns (Wind);
}

message WeatherRequest {
	Coordinates coordinates = 1;
}

message Coordinates {
	fixed64 latitude = 1;
	fixed64 longitude = 2;
}

message WeatherResponse {
	Temperature temperature = 1;
	float humidity = 2;
	Wind wind = 3;
}

message Temperature {
	float degrees = 1;
	Units units = 2;
	
	enum Units {
		FAHRENHEIT = 0;
		CELCIUS = 1;
		KELVIN = 2;
	}
}

message HumidityResponse {
	float humidity = 1;
}

message Wind {
	Speed speed = 1;
	float direction = 2;
}

message Speed {
	float value = 1;
	Units units = 2;
	
	enum Units {
		MPH = 0;
		MPS = 1;
		KNOTS = 2;
		KMH = 3;
	}
}

